# email-cleaner

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  future_update.md  pyproject.toml
.github/workflows/: ci.yml
email_cleaner/: __init__.py  ai.py  cli.py  config.py  errors.py  imap_client.py  providers.py  scanner.py  ui.py
tests/: test_units.py
