[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "email-cleaner"
version = "0.3.0"
description = "Clean promotional email out of your inbox from the command line."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Daniel" }]
keywords = ["email", "gmail", "imap", "inbox", "cleaner"]

[project.scripts]
email-cleaner = "email_cleaner.cli:main"

[tool.setuptools]
packages = ["email_cleaner"]
